--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 						<div class="row"> 
 							<div class="col-md-12">
 								<div class="about-logo">
-									<h3>We are awesome <span class="color">TEAM</span></h3> by Github
+									<h3>We are awesome <span class="color">TEAM</span></h3>
 									<p>Kasper Data Information Technologies is innovative way to build Web and Enterprise application. Most recent experience in Mobility applications and IAM domain tools like CA siteminder and PingFederation etc..</p>
 									<p>Ready to build web technologies like HTML, CSS, JavaScript, Java, J2EE and it's related all java frameworks</p>
 								</div>
