--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
 							</address>
 							<p>
 								<i class="icon-phone"></i> (+91) 99999-99999 <br>
-								<i class="icon-envelope-alt"></i> kasperdata.info@gmail.com
+								<i class="icon-envelope-alt"></i>info@kasperdata.com
 							</p>
 						</div>
 					</div>
