--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
 									<!-- Team Member -->
 									<div class="team-member">
 										<!-- Image -->
-										<img class="img-responsive" src="img/team1.jpg" alt="">
+										<img class="img-responsive" src="img/team0.jpg" alt="">
 										<!-- Name -->
 										<h4>#Johne Doe</h4>
 										<span class="deg">#Creative</span> 
@@ -211,27 +211,27 @@
 									<!-- Team Member -->
 									<div class="team-member">
 										<!-- Image -->
-										<img class="img-responsive" src="img/team2.jpg" alt="">
+										<img class="img-responsive" src="img/team0.jpg" alt="">
 										<!-- Name -->
 										<h4>#Jennifer</h4>
 										<span class="deg">#Programmer</span> 
 									</div>
 								</div>
-								<div class="col-md-3 col-sm-6">
+								<!--<div class="col-md-3 col-sm-6">
 									<!-- Team Member -->
 									<div class="team-member">
 										<!-- Image -->
-										<img class="img-responsive" src="img/team3.jpg" alt="">
+										<img class="img-responsive" src="img/team0.jpg" alt="">
 										<!-- Name -->
 										<h4>#Christean</h4>
 										<span class="deg">#CEO</span> 
 									</div>
-								</div>
+								</div>-->
 								<div class="col-md-3 col-sm-6">
 									<!-- Team Member -->
 									<div class="team-member">
 										<!-- Image -->
-										<img class="img-responsive" src="img/team4.jpg" alt="">
+										<img class="img-responsive" src="img/team0.jpg" alt="">
 										<!-- Name -->
 										<h4>#Kerinele rase</h4>
 										<span class="deg">#Manager</span> 
