--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
 										<!-- Image -->
 										<img class="img-responsive" src="img/team0.jpg" alt="">
 										<!-- Name -->
-										<h4>#Johne Doe</h4>
+										<h4>#Name</h4>
 										<span class="deg">#Creative</span> 
 									</div>
 								</div>
@@ -213,27 +213,27 @@
 										<!-- Image -->
 										<img class="img-responsive" src="img/team0.jpg" alt="">
 										<!-- Name -->
-										<h4>#Jennifer</h4>
+										<h4>#Name</h4>
 										<span class="deg">#Programmer</span> 
 									</div>
 								</div>
-								<!--<div class="col-md-3 col-sm-6">
-									<!-- Team Member -->
-									<div class="team-member">
-										<!-- Image -->
-										<img class="img-responsive" src="img/team0.jpg" alt="">
-										<!-- Name -->
-										<h4>#Christean</h4>
-										<span class="deg">#CEO</span> 
-									</div>
-								</div>-->
 								<div class="col-md-3 col-sm-6">
 									<!-- Team Member -->
 									<div class="team-member">
 										<!-- Image -->
 										<img class="img-responsive" src="img/team0.jpg" alt="">
 										<!-- Name -->
-										<h4>#Kerinele rase</h4>
+										<h4>#Name</h4>
+										<span class="deg">#CEO</span> 
+									</div>
+								</div>
+								<div class="col-md-3 col-sm-6">
+									<!-- Team Member -->
+									<div class="team-member">
+										<!-- Image -->
+										<img class="img-responsive" src="img/team0.jpg" alt="">
+										<!-- Name -->
+										<h4>#Name</h4>
 										<span class="deg">#Manager</span> 
 									</div>
 								</div>
